...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/filter_count"
                        app:drawableLeftCompat="@drawable/ic_outline_filter_alt_24" />

                    <ImageView
                        android:id="@+id/taskFragmentAddTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/timeline_node_offset_5dp"
                        android:layout_toStartOf="@+id/filter_btn"
                        android:contentDescription="@string/add_task_button"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
