...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/addNewTaskScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
...
            <View
                style="@style/Divider"
                android:layout_marginHorizontal="@dimen/padding_horizontal_title_add_task"
                />

            <com.sap.cloud.mobile.fiori.formcell.GenericListPickerFormCell
                android:id="@+id/addNewTaskProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:activityTitle="Select Products"
                app:displayValue="Select Products"
                app:key="@string/add_task_products"
                app:value="@array/add_task_type_options"
...
