<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tasks"
        android:enabled="true"
        android:icon="@drawable/outline_done_outline_24"
        android:title="@string/text_label_tasks"/>
    <item
        android:id="@+id/work_cart"
        android:enabled="true"
...
