...
    android:orientation="horizontal"
    android:paddingVertical="16dp"
    android:paddingStart="0dp"
    android:paddingEnd="16dp">

    <CheckBox
        android:id="@+id/product_by_location_checkbox"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="8dp"
        android:buttonTint="@color/button_color"
        android:checked="false" />
...
